# MotieWijzer

./: .gitignore  README.md  pyproject.toml
MotieWijzer/: __main__.py
MotieWijzer/Business/: Downloader.py  InfoRetriever.py  Runner.py  Scraper.py  __init__.py
