[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "motie-wijzer"
version = "0.1.0"
dependencies = [
  "colorama>=0.4.6",
  "pandas>=2.3.0",
  "progress>=1.6",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "requests>=2.32.4",
  "tkapi>=0.9.8",
  "typer>=0.16.0"
]

[project.scripts]
motiewijzer = "motiewijzer.__main__:main"

[tool.poetry]
classifiers = ["Private :: Do Not Upload",]
